src/scanner.c
/* A recursive-descent parser generated by peg 0.1.9 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 19

#include "menace/scanner.h"
#include <stdio.h>

#define YY_INPUT(buf, result, max_size)             \
{                                                   \
    int yyc = getc(ctx->file);                      \
    result = (EOF == yyc) ? 0 : (*(buf)=yyc, 1);    \
}

#define YY_CTX_LOCAL
#define YYSTYPE             token_t
#define YY_PARSE(T)         static T
#define MAX_INDENT          32
#define CURRENT_INDENT      (ctx->indents[ctx->indent_depth])

#define YY_CTX_MEMBERS                                  \
    FILE                *file;                          \
    int                 indent_depth;                   \
    int                 indents[MAX_INDENT];            \
    int                 pending_dents;                  \
    int                 pending_is_indent;              \
    token_t             pushback_token;                 \
    char                is_eof;                         \
    char                was_newline;                    \
    char                *error;

#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( ctx->begin= ctx->pos, 1)
#endif
#ifndef YY_END
#define YY_END		( ctx->end= ctx->pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *ctx, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *buf;
  int       buflen;
  int       pos;
  int       limit;
  char     *text;
  int       textlen;
  int       begin;
  int       end;
  int       textmax;
  yythunk  *thunks;
  int       thunkslen;
  int       thunkpos;
  YYSTYPE   yy;
  YYSTYPE  *val;
  YYSTYPE  *vals;
  int       valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext yyctx0;
yycontext *yyctx= &yyctx0;
#endif

YY_LOCAL(int) yyrefill(yycontext *ctx)
{
  int yyn;
  while (ctx->buflen - ctx->pos < 512)
    {
      ctx->buflen *= 2;
      ctx->buf= (char *)realloc(ctx->buf, ctx->buflen);
    }
  YY_INPUT((ctx->buf + ctx->pos), yyn, (ctx->buflen - ctx->pos));
  if (!yyn) return 0;
  ctx->limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *ctx)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  ++ctx->pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *ctx, int c)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  if ((unsigned char)ctx->buf[ctx->pos] == c)
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *ctx, char *s)
{
  int yysav= ctx->pos;
  while (*s)
    {
      if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
      if (ctx->buf[ctx->pos] != *s)
        {
          ctx->pos= yysav;
          return 0;
        }
      ++s;
      ++ctx->pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *ctx, unsigned char *bits)
{
  int c;
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  c= (unsigned char)ctx->buf[ctx->pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *ctx, yyaction action, int begin, int end)
{
  while (ctx->thunkpos >= ctx->thunkslen)
    {
      ctx->thunkslen *= 2;
      ctx->thunks= (yythunk *)realloc(ctx->thunks, sizeof(yythunk) * ctx->thunkslen);
    }
  ctx->thunks[ctx->thunkpos].begin=  begin;
  ctx->thunks[ctx->thunkpos].end=    end;
  ctx->thunks[ctx->thunkpos].action= action;
  ++ctx->thunkpos;
}

YY_LOCAL(int) yyText(yycontext *ctx, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (ctx->textlen < (yyleng + 1))
	{
	  ctx->textlen *= 2;
	  ctx->text= (char *)realloc(ctx->text, ctx->textlen);
	}
      memcpy(ctx->text, ctx->buf + begin, yyleng);
    }
  ctx->text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *ctx)
{
  int pos;
  for (pos= 0;  pos < ctx->thunkpos;  ++pos)
    {
      yythunk *thunk= &ctx->thunks[pos];
      int yyleng= thunk->end ? yyText(ctx, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, ctx->text));
      thunk->action(ctx, ctx->text, yyleng);
    }
  ctx->thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *ctx)
{
  if ((ctx->limit -= ctx->pos))
    {
      memmove(ctx->buf, ctx->buf + ctx->pos, ctx->limit);
    }
  ctx->begin -= ctx->pos;
  ctx->end -= ctx->pos;
  ctx->pos= ctx->thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *ctx, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(ctx);
      yyCommit(ctx);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *ctx, char *text, int count)  { ctx->val += count; }
YY_LOCAL(void) yyPop(yycontext *ctx, char *text, int count)   { ctx->val -= count; }
YY_LOCAL(void) yySet(yycontext *ctx, char *text, int count)   { ctx->val[count]= ctx->yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(ctx, yythunkpos0)

YY_RULE(int) yy_ESCAPE(yycontext *ctx); /* 19 */
YY_RULE(int) yy_NON_PRINTABLE(yycontext *ctx); /* 18 */
YY_RULE(int) yy_IDENT_TAIL(yycontext *ctx); /* 17 */
YY_RULE(int) yy_IDENT_REST(yycontext *ctx); /* 16 */
YY_RULE(int) yy_IDENT_START(yycontext *ctx); /* 15 */
YY_RULE(int) yy_STRING_CHAR(yycontext *ctx); /* 14 */
YY_RULE(int) yy_BIN_DIGIT(yycontext *ctx); /* 13 */
YY_RULE(int) yy_OCT_DIGIT(yycontext *ctx); /* 12 */
YY_RULE(int) yy_HEX_DIGIT(yycontext *ctx); /* 11 */
YY_RULE(int) yy_EOF(yycontext *ctx); /* 10 */
YY_RULE(int) yy_EOL(yycontext *ctx); /* 9 */
YY_RULE(int) yy_WHITESPACE(yycontext *ctx); /* 8 */
YY_RULE(int) yy_IDENT(yycontext *ctx); /* 7 */
YY_RULE(int) yy_SYMBOL(yycontext *ctx); /* 6 */
YY_RULE(int) yy_Keyword(yycontext *ctx); /* 5 */
YY_RULE(int) yy_Punctuation(yycontext *ctx); /* 4 */
YY_RULE(int) yy_STRING(yycontext *ctx); /* 3 */
YY_RULE(int) yy_INTEGER(yycontext *ctx); /* 2 */
YY_RULE(int) yy_Token(yycontext *ctx); /* 1 */

YY_ACTION(void) yy_12_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_12_Keyword\n"));
   yy = T_NOT ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_11_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_11_Keyword\n"));
   yy = T_OR ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_10_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_10_Keyword\n"));
   yy = T_AND ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_9_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_9_Keyword\n"));
   yy = T_RETURN ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_8_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_8_Keyword\n"));
   yy = T_PASS ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_7_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_7_Keyword\n"));
   yy = T_FALSE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_6_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_6_Keyword\n"));
   yy = T_TRUE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_5_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_5_Keyword\n"));
   yy = T_ELSE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_4_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_4_Keyword\n"));
   yy = T_ELSEIF ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_3_Keyword\n"));
   yy = T_IF ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_Keyword\n"));
   yy = T_WHILE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Keyword(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_Keyword\n"));
   yy = T_DEF ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_30_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_30_Punctuation\n"));
   yy = T_R_BRACKET ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_29_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_29_Punctuation\n"));
   yy = T_L_BRACKET ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_28_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_28_Punctuation\n"));
   yy = T_R_BRACE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_27_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_27_Punctuation\n"));
   yy = T_L_BRACE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_26_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_26_Punctuation\n"));
   yy = T_R_PAREN ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_25_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_25_Punctuation\n"));
   yy = T_L_PAREN ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_24_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_24_Punctuation\n"));
   yy = T_DOT ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_23_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_23_Punctuation\n"));
   yy = T_COMMA ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_22_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_22_Punctuation\n"));
   yy = T_COLON ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_21_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_21_Punctuation\n"));
   yy = T_HASHROCKET ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_20_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_20_Punctuation\n"));
   yy = T_EQUALS ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_19_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_19_Punctuation\n"));
   yy = T_GT ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_18_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_18_Punctuation\n"));
   yy = T_GTE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_17_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_17_Punctuation\n"));
   yy = T_LTE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_16_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_16_Punctuation\n"));
   yy = T_LT ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_15_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_15_Punctuation\n"));
   yy = T_NEQ ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_14_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_14_Punctuation\n"));
   yy = T_EQ ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_13_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_13_Punctuation\n"));
   yy = T_DBL_PIPE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_12_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_12_Punctuation\n"));
   yy = T_DBL_AMPERSAND ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_11_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_11_Punctuation\n"));
   yy = T_PIPE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_10_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_10_Punctuation\n"));
   yy = T_AMPERSAND ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_9_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_9_Punctuation\n"));
   yy = T_BANG ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_8_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_8_Punctuation\n"));
   yy = T_HAT ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_7_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_7_Punctuation\n"));
   yy = T_TILDE ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_6_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_6_Punctuation\n"));
   yy = T_POW ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_5_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_5_Punctuation\n"));
   yy = T_MOD ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_4_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_4_Punctuation\n"));
   yy = T_DIV ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_3_Punctuation\n"));
   yy = T_TIMES ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_Punctuation\n"));
   yy = T_MINUS ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Punctuation(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_Punctuation\n"));
   yy = T_PLUS ;
